--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -10,23 +10,23 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
-    <string name="tituloContato">Contacts</string>
+    <string name="tituloContato">Contatos</string>
 
-    <string name="novoContato">New contact</string>
-    <string name="editarContato">Edit contact</string>
+    <string name="novoContato">Novo contato</string>
+    <string name="editarContato">Editar contato</string>
 
-    <string name="nomeContato">Contact name</string>
-    <string name="telefoneContato">Contact phone</string>
-    <string name="emailContato">Contact email</string>
+    <string name="nomeContato">Nome contato</string>
+    <string name="telefoneContato">Telefone contato</string>
+    <string name="emailContato">E-mail contato</string>
 
     <string-array name="operadoras">
-        <item>(Select an operator)</item>
+        <item>(Selecione uma operadora)</item>
         <item>Claro</item>
         <item>Oi</item>
         <item>Tim</item>
         <item>Vivo</item>
     </string-array>
 
-    <string name="btnSalvarContato">Salve</string>
+    <string name="btnSalvarContato">Salvar</string>
 
 </resources>
